---
source: crates/rargs/tests/test_scripts.rs
description: "[stdout] catch-all-global.sh no-multiple something with --additional args and --debug"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
something with --additional args and --debug
